Java 8 API compatibility changes (#1015)
- Upgraded dependencies and maven plugins to latest versions compatible with JDK 8+.
- Remove JDK 7 from CI build
- Consolidated `ci.yml` build matrix
- JDK 8 through 24 build testing
- Removed `io.jsonwebtoken.impl.lang.Function` in favor of `java.util.function.Function`
- Marked API interfaces as `@FunctionalInterface` where possible
- Migrated `io.jsonwebtoken.lang.Supplier` usages to `java.util.function.Supplier` where possible, except for `RedactedSupplier` usages.
- Breaking change: Renamed and moved `io.jsonwebtoken.lang.Supplier` to `io.jsonwebtoken.security.ConfidentialValue`
- Breaking change: Renamed `GsonSupplierSerializer` to `GsonConfidentialValueSerializer`
- Breaking change: Renamed `JacksonSupplierSerializer` to `JacksonConfidentialValueSerializer`

* Declared `@FunctionalInterface` / cleanup where feasible.

* Removing explicit Java 7 and Java 8 callouts/references now that 8 is the default/baseline.

* Removing explicit Java 7 and Java 8 callouts/references now that 8 is the default/baseline.

* Minor JavaDoc enhancement